# weatherization-assistant-neat-mhea

./: CMakeLists.txt  README.md  license  metadata.yml
bat/: check_all  get_json_inputs  rebase_all  run_mhea_test  run_neat_test  show_version  update_version
input/mhea/: 00_Minimum_Audit.json  01_Single_wide_mobile_home.json
input/neat/: 00_Minimum_Audit.json  01_MO_One_story_ranch.json
src/: CMakeLists.txt
src/cjson/: cjson.c  cjson.h
src/common/: CMakeLists.txt  command_line.c  command_line.h  constant.h  definition.h  dwelling.h  enumeration.h  fuels.c  fuels.h  hvac_2.c  hvac_2.h  infiltration.c  infiltration.h  json.c  json.h  macro.h  output.h  utility.c  utility.h  version.h  wa_engine.c  wa_engine.h  weather.c  weather.h
src/getopt/: README.md
src/mhea/: CMakeLists.txt  balance.c  billing.c  billing.h  calcs.h  consmptn.c  constant.h  definition.h  dwelling.h  energyuse.c  energyuse.h  enumeration.h  intermediate.h  json.c  json.h  loads.c  measure.c  measure.h  mhea.c  mhea.h  output.h  precalcs.c  precalcs.h  preflight.c  preflight.h  results.c  results.h  retrofit.c  retrofit.h  ua_dor.c  ua_flr.c  ua_rof.c  ua_wal.c  ua_win.c
src/neat/: CMakeLists.txt  billing.c  billing.h  constant.h  definition.h  dwelling.h  ecms.c  ecms.h  enumeration.h  infiltration.c  infiltration.h  intermediate.h  json.c  json.h  neat.c  neat.h  output.h  postwx.h  preflight.c  preflight.h  report.c  report.h  run_preparation.c  run_preparation.h  size.c  size.h  subs.c  subs.h
sys/fuel_escalation/: 2011_01.json  2011_02.json  2011_03.json  2011_04.json  2011_05.json  2012_01.json  2012_02.json  2012_03.json  2012_04.json  2012_05.json  2013_01.json  2013_02.json  2013_03.json  2013_04.json  2013_05.json  2014_01.json  2014_02.json  2014_03.json  2014_04.json  2014_05.json  2015_01.json  2015_02.json  2015_03.json  2015_04.json  2015_05.json  2016_01.json  2016_02.json  2016_03.json  2016_04.json  2016_05.json  2017_01.json  2017_02.json  2017_03.json  2017_04.json  2017_05.json  2018_01.json  2018_02.json  2018_03.json  2018_04.json  2018_05.json  (+18 more)
sys/json_schema/: mhea_API_output_schema.json  mhea_input_schema.json  mhea_output_schema.json  neat_API_output_schema.json  neat_input_schema.json  neat_output_schema.json
sys/weather/: ABILENTX.WX  AKRONOHI.WX  ALBANYNY.WX  ALBUQUNM.WX  ALLNTNPA.WX  ALPENAMI.WX  AMARILTX.WX  APALAHFL.WX  ARCATACA.WX  ASHVILNC.WX  ASTORAOR.WX  ATLANTGA.WX  AUGSTAGA.WX  AUSTINTX.WX  BAKERFCA.WX  BALTMRMD.WX  BANGORME.WX  BARSTOCA.WX  (+206 more)
(+44 files in other folders)
